massive shit (tiktok dead jokes)

--- a/index.html
+++ b/index.html
@@ -4,12 +4,44 @@
 <head>
 <meta content="en-us" http-equiv="Content-Language" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>Hello World</title>
+<title>Mhd. Althariq Rifqi</title>
+<style type="text/css">
+.auto-style1 {
+	text-align: center;
+}
+.auto-style2 {
+	text-align: center;
+	font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+}
+.auto-style3 {
+	font-size: large;
+}
+.auto-style4 {
+	border-width: 0px;
+}
+.auto-style5 {
+	font-size: x-large;
+}
+</style>
 </head>
 
-<body>
+<body style="color: #FFFFFF; margin: 25px; background-color: #000000; background-image: url('img/bg/ss035.gif')">
 
-<p>Hello World</p>
+<div class="auto-style1">
+	<h1 class="auto-style2">
+	<img height="50" src="img/element/skyline.gif" width="397" /></h1>
+	<h1 class="auto-style2">Mhd. Althariq Rifqi</h1>
+	<p class="auto-style3">Hey wake up! how come you don't look like usual? did 
+	you have a weird dream? nightmare? forget it, now you are in a very old 
+	school but still fun era. Welcome to my page, I'm a photography and abstract 
+	or Y2K artist, and I'm a music fan for sure. This page is still under 
+	construction so some of the other pages don't exist yet.</p>
+	<p class="auto-style5"><strong><a href="portfolio.html">Portfolio</a><br />
+	<a href="commission.html">Commission</a></strong></p>
+	<p class="auto-style1">
+	<a href="https://en.wikipedia.org/wiki/Microsoft_Expression_Web">
+	<img alt="" class="auto-style4" height="31" src="img/button/microsoft_frontpage.gif" width="88" /></a><a href="http://toastytech.com/evil/index.html"><img alt="" class="auto-style4" height="31" src="img/button/ieexplode.gif" width="88" /></a><a href="https://www.mozilla.org/en-US/firefox/new/"><img alt="" class="auto-style4" height="31" src="img/button/firefoxnow.gif" width="88" /></a></p>
+	<img alt="" height="51" src="img/element/Constuction_bar.gif" width="574" /></div>
 
 </body>
 
